--- a/views/partials/posteditormodal.handlebars
+++ b/views/partials/posteditormodal.handlebars
@@ -1,4 +1,4 @@
-<div class="modal fade" id="editPostModal" tabindex="-1" role="dialog" aria-labelledby="editPostModalLabel" aria-hidden="true" data-post-id="{{postID}}">
+<div class="modal fade" id="editPostModal" tabindex="-1" role="dialog" aria-labelledby="editPostModalLabel" aria-hidden="true" data-post-id="{{postID}}" data-original-privacy="{{privacy}}">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
