--- a/views/partials/scriptPartials/linkPreviewPreview.handlebars
+++ b/views/partials/scriptPartials/linkPreviewPreview.handlebars
@@ -1,5 +1,5 @@
     {{#if editing}}
-    <a class="link-preview-container" linkUrl="{{linkUrl}}" contenteditable="false">
+    <a class="link-preview-container slidable-embed" linkUrl="{{linkUrl}}" contenteditable="false">
     {{/if}}
     {{#if image}}
     <img class="link-preview-image" src="{{image}}" />
