--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -58,7 +58,7 @@
                 </span>
                 {{#if lastEdited}}
                 &nbsp;&middot;&nbsp;
-                <span class="post-edited" title="edited {{this.fullEditedTimestamp}}">Edited</span>
+                <span class="post-edited" title="last edited {{this.fullEditedTimestamp}}">Edited</span>
                 {{/if}}
             </aside>
         </div>
