--- a/views/partials/scriptPartials/textEditorScripts.handlebars
+++ b/views/partials/scriptPartials/textEditorScripts.handlebars
@@ -31,13 +31,15 @@
     function clearEmbed(e) {
         //todo: if the images is a new one then call cleartempimage with its file name
         var m = $(this).parent().parent();
+        m.closest('.ql-container')[0].__quill.focus();
+        m.closest('.ql-container')[0].__quill.updateContents(); //slightly hacky way to get quill to save the image description so it'll put it back if this deletion is undone
         if (m[0].request && m[0].request.readyState != 4) { //if the request is still in progress
             m[0].request.abort();
         }
         var postform = m.closest('.new-comment-form, .contentForm');
         m.remove();
         updateSubmitButtonState(postform);
-        createImageGroups(m.closest('.ql-editor'));
+        createImageGroups(postform.find('.ql-editor'));
     }
 
     var newEmbedId = 0; //this increments every time an embed is added in an editor anywhere and before that is used to create their ids so they can all be uniquely identified
@@ -133,8 +135,29 @@
     var files = {}; //each file object is stored in this object under the container's id so that if a user deletes an image embed and then undoes that action, quill can find the file in here and reconstitute the embed from it.
     class PostImage extends BlockEmbed {
 
-        //this is called when the quill api is used to create an embed with type 'PostImage' (which is where you pass in the file)
-        static create(file) {
+        //this is called when the quill api is used to create an embed with type 'PostImage' (which is where you pass in the file). it's also called to recreate one of these if it's
+        //deleted and then that's undone, in which case if the image is already on the server we want to use that instead of uploading a new copy, so a string with the full url of the
+        //image will be passed in in that case (quill gets it from the value() function)
+        static create(fileOrUrl) {
+            if(typeof fileOrUrl == "string"){
+                var url = fileOrUrl;
+                let node = super.create();
+                node.setAttribute('contenteditable', false);
+                node.setAttribute('imagealreadysaved','true');
+                node.setAttribute('fullsavedurl',url);
+                node.innerHTML = $("#new-post-image-preview-contents")[0].innerHTML;
+                var n = $(node);
+                n.addClass('slidable-embed');
+                n.find(".fader").remove();
+                n.find(".image-preview").css('background-image','url('+url+')');
+                n.find('.image-clear').click(clearEmbed);
+                n.find('.image-move').on('mousedown', mousedownOnHandle);
+                n.find('.image-move')[0].addEventListener('touchstart', touchStartOnHandle, { passive: false });
+                return node;
+            }
+            
+            var file = fileOrUrl;
+            
             if (file.type != "image/jpeg" && file.type != "image/png" && file.type != "image/gif") {
                 bootbox.alert("Sorry, but this appears to be an unsupported file type! We only take JPG, PNG, and GIF images at the moment");
                 return null;
@@ -148,7 +171,7 @@
             var id = newEmbedId;
             newEmbedId++;
             node.setAttribute('contenteditable', false);
-            node.setAttribute('image-url', 'loading...')
+            node.setAttribute('image-url', 'loading...');
             node.innerHTML = $("#new-post-image-preview-contents")[0].innerHTML;
             var n = $(node);
             n.addClass("still-loading");
@@ -204,7 +227,7 @@
                         if (serverResponse.error == "filesize") {
                             bootbox.alert("Image too large! The maximum size for GIF images is 5MB and for JPG and PNG images is 10MB.");
                         } else if (serverResponse.error == "filetype") {
-                            bootbox.alert("We cannot use this file! Please make sure you are uploading a JPG, PNG, or GIF from this universe.");
+                            bootbox.alert("We cannot use this fileOrUrl! Please make sure you are uploading a JPG, PNG, or GIF from this universe.");
                         }
                         endMovement(); //in case this link preview is currently being dragged
                         m.find('.image-clear').click();
@@ -228,14 +251,31 @@
         }
 
         //quill calls this function to find out what value it should put for this embed in the object it returns when you call getContents() on it (although we don't use this there)
-        //or what value to pass to create() if it has to recreate this object bc of an undo, which we can use
+        //or what value to pass to create() if it has to recreate this object bc of an undo. when that happens, we want it to be recreated using the file that created it if the image
+        //is not yet saved on the server (if this is a new post) or using the image from the server if that's saved in public view (if this is an image that was already in a post
+        //that's now being edited)
         static value(node) {
-            return files[node.getAttribute('id')];
+            if(node.getAttribute("imagealreadysaved")){
+                return node.getAttribute('fullsavedurl')
+            }else{
+                return files[node.getAttribute('id')];
+            }
         }
 
         //quill calls this function to find out what attributes it should put for this embed in the object it returns when you call getContents() on it
         static formats(node) {
-            return { description: $(node).find('#postImageDescription').val(), imageURL: node.getAttribute('image-url') };
+            return { description: $(node).find('#postImageDescription').val(), imageURL: node.getAttribute('image-url'), id: node.getAttribute('id') };
+        }
+
+        //when quill recreates one of these after undoing it will reapply the formats established by the method above
+        format(name, value) {
+            if(name=="description"){
+                $(this.domNode).find("#postImageDescription").val(value);
+            }else if(name=="imageURL"){
+                this.domNode.setAttribute('image-url',value);
+            }else if(name=="id"){
+                this.domNode.setAttribute('id',value);
+            }
         }
     }
     PostImage.blotName = 'PostImage';
