fix very boring problems

--- a/views/partials/posteditormodal.handlebars
+++ b/views/partials/posteditormodal.handlebars
@@ -10,7 +10,7 @@
       <div class="modal-body">
           <div class="contentForm" id="postEditForm">
           <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose image" name="postImage" multiple style="display:none;">
-              <div class="form-row" style="margin-bottom:0.5rem" id="postContentWarningsContainer"{{#if contentWarnings}} style="display:block;"{{/if}}>
+              <div class="form-row" style="margin-bottom:0.5rem;{{#if contentWarnings}}display:block;{{/if}}" id="postContentWarningsContainer">
                 <input type="text" class="form-control" name="postContentWarnings" id="postContentWarnings" placeholder="Warn others about your post's content." value="{{contentWarnings}}" />
               </div>
               <div class="editable-post-content editable-text" id="editPostContent"></div>
