--- a/scss/_miscellanea.scss
+++ b/scss/_miscellanea.scss
@@ -1,5 +1,10 @@
 /*miscellaneous! not a big fan of that label but, */
 
+.outlined-icon path{
+  stroke:$sweet-red;
+  stroke-width:15;
+}
+
 [type=search] {
     outline-offset: -2px;
     -webkit-appearance: none
