--- a/views/partials/scriptPartials/imagePreview.handlebars
+++ b/views/partials/scriptPartials/imagePreview.handlebars
@@ -11,8 +11,8 @@
     </div>
     <textarea class="form-control mb-3" name="postImageDescription" id="postImageDescription" placeholder="Describe this image for people using screen readers.">{{#if editing}}{{description}}{{/if}}</textarea>
     <div class="image-preview-controls">
-        <div class="image-control image-clear" title="Clear image"><i class="fas fa-times"></i></div>
-        <div class="image-control image-move" title="Move image" ondragstart="return false;" ondrop="return false;"><i class="fas fa-arrows-alt"></i></div>
+        <div class="image-control image-clear" title="Clear image"><i class="fas fa-times outlined-icon"></i></div>
+        <div class="image-control image-move" title="Move image" ondragstart="return false;" ondrop="return false;"><i class="fas fa-arrows-alt outlined-icon"></i></div>
     </div>
     {{#if editing}}
     </div>
