--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,5 +1,5 @@
 <div id="homeBody" class="row justify-content-center">
-    <div class="col-lg-8 pane">
+    <div class="col-lg-8 pane" style="padding:0.5rem">
         <h3 class="page-header">wat</h3>
         <p>
             sweet is a utopian social network based on a few basic principles derived from decentralised organisation practices: <strong>transparency</strong>, <strong>direct democracy</strong>, and <strong>safe spaces</strong>.
