--- a/views/partials/scriptPartials/linkPreviewPreview.handlebars
+++ b/views/partials/scriptPartials/linkPreviewPreview.handlebars
@@ -5,9 +5,9 @@
     <img class="link-preview-image" src="{{image}}" />
     {{else}}
     {{#if editing}}
-    <div class="link-preview-image" style="font-size:50px;text-align:center;"><i class="fas fa-link"></i></div>
+    <div class="link-preview-image"><i class="fas fa-link"></i></div>
     {{else}}
-    <div class="link-preview-image" style="font-size:50px;text-align:center;"><i class="fas fa-spinner fa-spin"></i></div>
+    <div class="link-preview-image"><i class="fas fa-spinner fa-spin"></i></div>
     {{/if}}
     {{/if}}
     <div class="link-preview-text-container" style="width:100%;">
