--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -268,6 +268,12 @@ button.close {
     flex-wrap: wrap;
 }
 
+@media(max-width:500px){
+    button.show-emoji-picker{
+        display:none;
+    }
+}
+
 .add-emoji {
     padding: 2px 0.15rem 0 0.15rem;
     border: 1px solid transparent;
@@ -325,6 +331,11 @@ button.close {
     margin-right: 0.15rem;
 }
 
+@media(max-width:500px){
+    #bottomPostControlsRow {
+        font-size: 0.75rem;
+    }
+}
 
 /* only used for post visibility controls*/
 .switch-field {
@@ -353,6 +364,14 @@ button.close {
     color: rgba(0, 0, 0, 0.6);
     border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.1);
+}
+
+@media(max-width:500px){
+    .switch-field label {
+        padding: 8px 8px;   
+        overflow: hidden;
+        font-size: 0.8rem;
+    }
 }
 
 .switch-field input:checked+label {
@@ -434,6 +453,12 @@ button.close {
     /* Internet Explorer/Edge */
     user-select: none;
     /* Non-prefixed version, currently supported by Chrome and Opera */
+}
+
+@media (max-width: 500px) {
+    .image-preview-container{
+        height: 90px;
+    }
 }
 
 .ipc-group {
@@ -526,6 +551,12 @@ button.close {
     margin: 0 0 0 10px;
     text-align: left;
     resize: none;
+}
+
+@media(max-width:500px){
+    #postImageDescription {
+        font-size: 0.85rem;
+    }
 }
 
 .onthemove {
