--- a/scss/_posts-comments.scss
+++ b/scss/_posts-comments.scss
@@ -515,7 +515,7 @@ article.comment>header .author-username {
 .link-preview-container {
     display: flex;
     height: 100px;
-    padding: 10px;
+    padding: 10px 2px;
     color: $text;
     font-weight: 500;
     border: 1px solid $medium-grey;
